--- a/src/components/UserPage/UserSharedComponents/Card/Card.scss
+++ b/src/components/UserPage/UserSharedComponents/Card/Card.scss
@@ -8,13 +8,12 @@
         box-shadow: inset 0px 3px 25px rgba(255, 255, 255, 0.25);
         height: 18rem;
         width: 17rem;
-        margin: 0 0.8rem;
+        margin: 0 1rem 0 0.7rem;
         padding: 2rem;
         @include center__element;
         flex-direction: column;
 
         &-profilepic {
-
             img {
                 width: 7.2rem;
                 filter: drop-shadow(0px 4px 17px rgba(114, 114, 114, 0.25));
